@@ -194,21 +194,21 @@ viaFlushPCI(ViaCommandBuffer * buf)
 					switch (pVia->Chipset) {
 					    case VIA_VX800:
 							while ((VIAGETREG(VIA_REG_STATUS) &
-							       (VIA_CMD_RGTR_BUSY_H5 | VIA_2D_ENG_BUSY_H5 |
-									VIA_3D_ENG_BUSY_H5 )) && (loop++ < MAXLOOP)) ;
+							       (VIA_CMD_RGTR_BUSY_H5 | VIA_2D_ENG_BUSY_H5))
+									&& (loop++ < MAXLOOP)) ;
 					    break;
 					    case VIA_K8M890:
 					    case VIA_P4M890:
 					    case VIA_P4M900:
                     		while ((VIAGETREG(VIA_REG_STATUS) &
-                            	   (VIA_CMD_RGTR_BUSY | VIA_2D_ENG_BUSY | VIA_3D_ENG_BUSY))
+                            	   (VIA_CMD_RGTR_BUSY | VIA_2D_ENG_BUSY))
                             		&& (loop++ < MAXLOOP)) ;
 					    break;
 						default:
                         	while (!(VIAGETREG(VIA_REG_STATUS) & VIA_VR_QUEUE_BUSY)
                                    && (loop++ < MAXLOOP)) ;
                     		while ((VIAGETREG(VIA_REG_STATUS) &
-                            	   (VIA_CMD_RGTR_BUSY | VIA_2D_ENG_BUSY | VIA_3D_ENG_BUSY))
+                            	   (VIA_CMD_RGTR_BUSY | VIA_2D_ENG_BUSY))
                                    && (loop++ < MAXLOOP)) ;
                     }
                 }
